getAllUserPolicies (#266)
* get GruopBasedUsers

create endpoint to get the logedin supervisor groups and create endpoint to get the users by groupid ,modification in get policies,delete endpoint in leaveBalance

* get groupUsers

create endpoint to get the logedin supervisor groups and create endpoint to get the users by groupid .delete supervise groupmembers LB endpoint in leavebalance.and modification in get policies .

* Update application.properties

* Update application.properties

* Update application.properties

* Update application property

* filtertimeoffRequst

modification in timeoffRequestEntity and the belonging adopter,repo.add features in fetch timoffreq berween the given range

* Update policy repo

* Get request merge fix

* fetch GroupBasedUsers

create endpoint to get the list of active users if loged user is a superAdmin and fetch group members if the logedin user is a "supervisor"

* get Activepayroll

modify the endpoints in payroll ,fetch only if the payroll is active

* enum Modify

create end point to fetch HourType as key,value pair ,change the mapping in payroll and payroll history for trigger function, moification in all enums

* get userPolicies

Adding a feature  in get all users as fetch their policies and their calander.